#6316 : fix spacing for filters

--- a/ModernSlavery.WebUI.StaticFiles/wwwroot/assets/styles/components/_option-select.scss
+++ b/ModernSlavery.WebUI.StaticFiles/wwwroot/assets/styles/components/_option-select.scss
@@ -174,6 +174,7 @@
 
 .gem-c-checkboxes__list{
     padding-left:0px;
+    margin-top:0px;
 }
 
 .finder .result-info {
